# EquationsSolver

./: CMakeLists.txt  README.md
code/: equation.cpp  equation.h  error.h  expression.cpp  expression.h  main.h  term.cpp  term.h
